--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Party Time Website</title>
-    <link rel="icon" href="https://i.imgur.com/PX3MbvN.png" type="image/png">
+    <link rel="icon" href="https://i.imgur.com/V9RT8Ey.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
